cleaned up config options

--- a/dronewars.html
+++ b/dronewars.html
@@ -8,6 +8,7 @@
 
     <script type="text/javascript" src="./bower_components/phaser/build/phaser.js"></script>
     <script type="text/javascript" src="./bower_components/clone.js/clone.js"></script>
+    <script src="./bower_components/simple-uuid/uuid.js"></script>
 
     <script type="text/javascript" src="./js/drones/nn/connection.js"></script>
     <script type="text/javascript" src="./js/drones/nn/neuron.js"></script>
